# CapCutAPI

./: .dockerignore  .env  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  DockerfileMCP  README-zh.md  README.md  add_audio_track.py  add_video_track.py  capcut_server.py  config.json  db.py  downloader.py  draft_cache.py  example.py  logging_utils.py  main.py  mcp_server_fix.py  mcp_stream_server.py  mcp_tools.py  models.py  postgres_draft_storage.py  process_controller.py  pyproject.toml  redis_config.py  redis_event_store.py  requirements-mcp.txt  requirements.txt  start_production.bat  start_production.sh  test_check_redis_cache.py  test_cognito_auth.py  test_rate_limit.py  util.py  waitress.conf.py  wsgi.py
.github/: CODEOWNERS
alembic/: env.py
api/: __init__.py  audio.py  draft_archives.py  draft_management_api.py  drafts.py  effects.py  generate.py  health.py  image.py  metadata.py  regenerate.py  segments.py  sticker.py  subtitle.py  tasks.py  text.py  tracks.py  video.py  video_task_status.py  videos.py  worker_status.py
draft_archive/: README.md
mcp/: __init__.py  mcp_tools.py  stream_server.py
mcp_services/: __init__.py  mcp_tools.py  stream_server.py
middleware/: __init__.py  logging.py  rate_limit.py
pyJianYingDraft/: __init__.py  animation.py  audio_segment.py  draft_folder.py  effect_segment.py  exceptions.py  jianying_controller.py  keyframe.py  llm_export.py  local_materials.py  script_file.py  segment.py  template_mode.py  text_segment.py  time_util.py  track.py  util.py  video_segment.py
repositories/: __init__.py  draft_archive_repository.py  draft_repository.py  redis_draft_cache.py  (+3 more)
util/: auth.py  (+8 more)
(+73 files in other folders)
